# ccbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FORK.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.claude/rules/: architecture.md
.github/workflows/: check.yml  ci.yml  release.yml
.spec/: PROGRESS.md  SESSION.yaml
.spec/epics/: EPIC-001-multi-instance.md  EPIC-002-command-overhaul.md  EPIC-003-session-resume.md  EPIC-004-ui-modernization.md  EPIC-005-standalone-fork.md  EPIC-006-python-314-refactor.md  EPIC-007-fork-independence.md
.spec/memory/: conventions.md
.spec/reqs/: REQ-006-python-314.md  REQ-007-fork-independence.md
.spec/tasks/: TASK-004-discover-cc-commands.md  TASK-005-rename-start-to-new.md  TASK-011-resume-command.md  TASK-012-topic-emoji.md  TASK-013-enhanced-dashboard.md  TASK-014-status-action-buttons.md  TASK-015-doc-cleanup.md  TASK-016-fork-attribution.md  TASK-017-github-metadata.md  TASK-018-pypi-package.md  TASK-019-homebrew-formula.md  TASK-020-ci-workflows.md  TASK-021-python-314-tooling.md  TASK-022-quality-gates-stage-a.md  TASK-023-refactor-callback-handler.md  TASK-024-refactor-text-handler.md  TASK-025-normalize-naming-state.md  TASK-026-harden-exceptions-logging.md  TASK-027-quality-gates-stage-bc.md  TASK-028-pypi-metadata.md  TASK-029-ci-release-workflows.md  TASK-030-readme-rewrite.md  TASK-031-license-changelog.md  TASK-033-e2e-new-window-sync-test.md  TASK-035-provider-registry-and-capability-policy.md
Formula/: ccbot.rb
doc/: telegram-bot-features.md
docs/: contributing.md  getting-started.md  guides.md
docs/plans/: 2026-02-12-multi-group-tmux-sync-improvements.md
scripts/: generate_homebrew_formula.py  restart-service.sh
src/ccbot/: __init__.py  _version.py  bot.py  cc_commands.py  cli.py  config.py  doctor_cmd.py  hook.py  main.py  markdown_v2.py  monitor_state.py  screenshot.py  session.py  session_monitor.py  status_cmd.py  telegram_sender.py  terminal_parser.py  tmux_manager.py  transcript_parser.py  utils.py  voice.py
src/ccbot/handlers/: __init__.py  callback_data.py  callback_helpers.py  cleanup.py  directory_browser.py  directory_callbacks.py  history.py  history_callbacks.py  interactive_callbacks.py  interactive_ui.py  message_queue.py  message_sender.py  recovery_callbacks.py  response_builder.py  resume_command.py  screenshot_callbacks.py  sessions_dashboard.py  status_polling.py  text_handler.py  topic_emoji.py  user_state.py  window_callbacks.py
src/ccbot/providers/: __init__.py  _jsonl.py  base.py  (+4 more)
src/ccmux/: bot.py  config.py  handlers.py  history.py  interactive_ui.py  main.py  message_builder.py  message_queue.py  message_sender.py  monitor_state.py  screenshot.py  session.py  session_monitor.py  status_handler.py  tmux_manager.py  transcript_parser.py  ui_components.py
tests/: conftest.py
tests/ccbot/: conftest.py  test_bot_callbacks.py  test_callback_auth.py  test_claude_characterization.py  test_cli.py  test_codex_provider.py  test_config.py  test_doctor_cmd.py  test_forward_command.py  test_gemini_provider.py  test_group_filter.py  test_handle_new_window.py  test_hook.py  test_jsonl_providers.py  test_kill_command.py  test_markdown_v2.py  test_message_sender.py  test_monitor_state.py  test_new_command.py  test_new_window_sync.py  test_provider_contracts.py  test_provider_registry.py  test_recovery_ui.py  test_resume_command.py  test_session.py  test_session_favorites.py  test_session_monitor.py  test_session_notification_mode.py  test_sessions_dashboard.py  test_status_cmd.py  test_status_polling.py  test_telegram_sender.py  test_terminal_parser.py  test_text_handler.py  test_topic_emoji.py  test_transcript_parser.py  test_utils.py
tests/integration/: test_config_integration.py  test_monitor_state_integration.py
(+13 files in other folders)
